# BASIC-subset-translator

./: .gitignore  CMakeLists.txt  README.md  build.py  emitter.cpp  emitter.hpp  format_code.py  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  test.cpp  test.hpp  token.cpp  token.hpp
code/: lexer.hpp  main.cpp  parser.cpp  test.cpp  test.hpp  token.cpp  token.hpp
demo/: prog.bas  prog.c
test_code/: prog.tt
